[package]

name = "http2parse"
version = "0.2.2"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-http2parse.git"
keywords = ["http2", "web", "parser", "frames"]
description = "An HTTP2 frame parser."
readme = "README.md"
license = "MIT"

[features]
random = ["rand"]

[dependencies]
bitflags = "0.1"
byteorder = "0.3"

[dependencies.rand]
version = "0.3"
optional = true

[dev-dependencies]
rand = "0.3"

